<resources>
    <string name="app_name">GeoFencing</string>
    <string name="title_activity_route_maker">RouteMakerActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_route_maker">Create route</string>
    <string name="plaats_route_maker">Location</string>
    <string name="straat_route_maker">Street</string>
    <string name="nummer_route_maker">Number</string>
    <string name="make_lap_route_maker">Make Lap?</string>
    <string name="start_route_maker">Start Route</string>
    <string name="route_completed">You have finished the route!</string>
    <string name="day_goal_reached">Congratulations! You reached your daily goal.</string>
    <string name="stop_route_button">Stop Route</string>
    <string name="current_points">Your statistics</string>
    <string name="total_steps_today">"Total steps today: "</string>
    <string name="previous_month">Previous month</string>
    <string name="all_time_best">Your all time best:</string>
    <string name="days">Day\'s</string>
    <string name="month_achievements">MonthAchievements</string>
    <string name="week_achievements">WeekAchievements</string>
    <string name="all_time_achievement">AllTimeAchievement</string>
    <string name="weeks">Weeks</string>
    <string name="this_week">This week</string>
    <string name="steps_goal">Steps goal:</string>
    <string name="gps_off">The map is disabled, turn on GPS to enable it again</string>
    <string name="gps_on">Map enabled!</string>
    <string name="all_time_date">Date</string>
    <string name="all_time_steps">Steps</string>
</resources>