<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RouteMakerActivity">

    <TextView
        android:id="@+id/title_route_maker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_route_maker"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_plaats"
        android:text="@string/plaats_route_maker"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_route_maker" />

    <EditText
        android:id="@+id/edit_plaats"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_plaats"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_straat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:text="@string/straat_route_maker"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_plaats" />

    <EditText
        android:id="@+id/edit_straat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_straat"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_nummer"
        android:text="@string/nummer_route_maker"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_straat"/>

    <EditText
        android:id="@+id/edit_nummer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_nummer"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_make_lap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/make_lap_route_maker"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/switch_make_lap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nummer" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_make_lap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:thumb="@drawable/ic_baseline_refresh_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_make_lap"
        app:layout_constraintTop_toBottomOf="@+id/edit_nummer"
        app:track="@drawable/custom_switch_track" />

    <Button
        android:onClick="startRouteClicked"
        android:text="@string/start_route_maker"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>